# soccer-radar

./: .gitignore  CMakeLists.txt  PRODUCTION_UPDATES.md  README.md  REWRITE_SUMMARY.md  build_termux.sh  download_models.sh  export_football_tv2radar_colab.py  export_fp16_remaining_colab.py  export_soccana_clean_colab.py  setup_models.py
include/keypoint_detection/: keypoint_detector.hpp
include/object_annotations/: annotator.hpp
include/object_detection/: object_detector.hpp
include/object_tracking/: tracker.hpp
include/pipelines/: detection_pipeline.hpp  keypoint_pipeline.hpp  processing_pipeline.hpp  tactical_pipeline.hpp  tracking_pipeline.hpp
include/player_clustering/: clustering.hpp  embeddings.hpp
include/tactical_analysis/: homography.hpp
include/utils/: constants.hpp  letterbox.hpp  onnx_helper.hpp  types.hpp  video_io.hpp
src/: main.cpp
src/keypoint_detection/: keypoint_detector.cpp
src/object_annotations/: annotator.cpp
src/object_detection/: object_detector.cpp
src/object_tracking/: tracker.cpp
src/pipelines/: detection_pipeline.cpp  keypoint_pipeline.cpp  processing_pipeline.cpp  tactical_pipeline.cpp  tracking_pipeline.cpp
src/player_clustering/: clustering.cpp  embeddings.cpp
src/tactical_analysis/: homography.cpp
src/utils/: letterbox.cpp  video_io.cpp
tests/: core_tests.cpp
